k8s/order-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-db
  namespace: microservices
spec:
  selector:
    app: order-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: order-db
          image: mongo:5.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: order-db-data
              mountPath: /data/db
      volumes:
        - name: order-db-data
          persistentVolumeClaim:
            claimName: order-db-pvc
