k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservices
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          # image: your-dockerhub-username/order-service:latest # Change this to your Docker image path # for production 
          image: order-service:latest # local
          ports:
            - containerPort: 5003
