k8s/product-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-db
  namespace: microservices
spec:
  selector:
    app: product-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-db
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
        - name: product-db
          image: mongo:5.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: product-db-data
              mountPath: /data/db
      volumes:
        - name: product-db-data
          persistentVolumeClaim:
            claimName: product-db-pvc
