k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: microservices
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          # image: your-dockerhub-username/product-service:latest # Change this to your Docker image path # Production
          image: product-service:latest # local development
          ports:
            - containerPort: 5002
