k8s/user-service.yaml
# k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          # image: your-username/user-service:latest # Change this to your Docker image path # Production
          image: user-service:latest # local
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: microservices
spec:
  ports:
    - port: 5001
  selector:
    app: user-service
